# WolfSSL_WebOTP-ESP32

./: CMakeLists.txt
main/: CMakeLists.txt  firmware_signature.c  firmware_signature.h  idf_component.yml  led_controller.c  led_controller.h  main.c  ota_manager.c  ota_manager.h  wifi_manager.c  wifi_manager.h
web-server/: main.py  requirements.txt  signature_service.py
