idf_component_register(
    SRCS 
        "main.c"
        "wifi_manager.c" 
        "led_controller.c"
        "ota_manager.c"
    INCLUDE_DIRS 
        "."
    REQUIRES
        nvs_flash
        esp_wifi
        esp_netif
        esp_event
        esp_http_client
        esp_https_ota
        app_update
        driver
        wolfssl
)